# unixodbc-gui-qt-code

./: ChangeLog  Makefile  README.build  README.dist  README.qmake  defines.pri  odbc.pri  unixODBC-GUI-Qt.pro  unixODBC-GUI-Qt.vpj  unixODBC-GUI-Qt.vpw  unixODBC-GUI-Qt.vtg  unixODBC-GUI-Qt5.vpj  unixODBC-GUI-Qt5.vpw
ODBCCreateDataSourceQ5/: Makefile  ODBCCreateDataSourceQ5.pro  main.cpp
ODBCDataManagerQ5/: DDataManager.cpp  DEditStatement.cpp  DNodeDataSourceNames.cpp  DNodeODBC.cpp  DNodeODBC.h  DOutputLog.h  Makefile.am  ODBCDataManagerQ5.pro  ODBCDataManagerQ5.vpj  ODBCModel.cpp  ODBCModel.h  ODBCModelConnection.cpp  ODBCModelConnection.h  ODBCModelDataSourcesFile.cpp  ODBCModelDataSourcesSystem.cpp  ODBCModelDataSourcesSystem.h  ODBCModelDataSourcesUser.cpp  ODBCModelDriver.cpp  ODBCModelDriver.h  ODBCModelDrivers.cpp  ODBCModelDrivers.h  ODBCModelEnvironment.cpp  ODBCModelSystem.cpp  ODBCModelSystem.h
ODBCManageDataSourcesQ5/: Makefile.am  ODBCManageDataSourcesQ5.vpj  main.cpp
ODBCTestQ5/: DlgDbcConnect.cpp  DlgToolsRunAutoTests.cpp  Makefile.Debug  ODBCTestQ5.pro  ODBCTestQ5.vpj  OdbcHandle.cpp  OdbcHandle.h  conn.cpp
Wrappers/: Wrappers.pro
gtrtstQ5/: Makefile.Debug  gtrtstQ5.pro  szMessageBox.cpp
ini/: Makefile
odbcinstQ5/: CAbout.h  CAdvanced.h  CDSNWizardDriver.cpp  CDSNWizardEntre.cpp  CDSNWizardProperties.cpp  CDSNWizardProperties.h  CDataSourceNameList.cpp  CDataSourceNamesFile.cpp  CDataSourceNamesFileModel.cpp  CDriverList.cpp  (+20 more)
trunk/ODBCCreateDataSourceQ5/: Makefile.am  ODBCCreateDataSourceQ5.pro  ODBCCreateDataSourceQ5.vpj  main.cpp
(+126 files in other folders)
